--- a/estilos/style.css
+++ b/estilos/style.css
@@ -23,22 +23,24 @@ section{
     margin: auto;
 }
 
-section > h1, h2, p{
+section > h1, p{
     text-align: center;
     padding-top: 10px;
 }
 
 section > h2 {
-    font-size: 1em;
+    text-align: center;
+    font-size: 0.75em;
 }
 
 section > p{
     padding-bottom: 5px;
 }
 
-section > img{
+section > div > img{
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+    padding-bottom: 10px;
 }
