--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +11,15 @@
 header{
     background-color: black;
     height: 100px;
+}
+
+h1, h2{
+    font-family: 'Rubik', sans-serif;
+}
+
+p{
+    font-family: 'Poppins', sans-serif;
+    font-size: 0.75em;
 }
 
 header > h1{
@@ -21,6 +33,7 @@ section{
     background-color: lightgray;
     width: 450px;
     margin: auto;
+    box-shadow: 2.5px 2.5px 1px rgba(0, 0, 0, 0.26);
 }
 
 section > h1, p{
@@ -33,8 +46,8 @@ section > h2 {
     font-size: 0.75em;
 }
 
-section > p{
-    padding-bottom: 5px;
+section > div > p{
+    padding: 5px;
 }
 
 section > div > img{
