--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -3,6 +3,7 @@
 @media screen and (min-width: 768px) {
     section{
         width: 700px;
+        box-shadow: 2.5px 2.5px 1px rgba(0, 0, 0, 0.26);
     }
 
     section > div > p{
